@@ -15,7 +15,6 @@ import lombok.Setter;
 import lombok.val;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 import static com.github.charlemaznable.logback.dendrobe.appender.LoggingEventElf.buildEventMap;
 import static com.google.common.collect.Maps.newHashMap;
@@ -27,7 +26,7 @@ public final class VertxAppender extends AsyncAppender {
 
     public static final String DEFAULT_VERTX_NAME = "DEFAULT";
 
-    private InternalAppender appender;
+    private final InternalAppender appender;
 
     public VertxAppender() {
         this.appender = new InternalAppender();
@@ -81,8 +80,8 @@ public final class VertxAppender extends AsyncAppender {
 
             val argumentArray = defaultIfNull(eventObject.getArgumentArray(), new Object[0]);
             val arguments = Arrays.stream(argumentArray)
-                    .filter(arg -> nonNull(arg) && VertxLogBeanPresentCache.isVertxLogBeanPresent(arg.getClass()))
-                    .collect(Collectors.toList());
+                    .filter(arg -> nonNull(arg) &&
+                            VertxLogBeanPresentCache.isVertxLogBeanPresent(arg.getClass())).toList();
             // 日志不包含@VertxLogBean注解的参数
             if (arguments.isEmpty()) {
                 val vertx = VertxManager.getVertx(vertxName);
